fix: min size and gaps

--- a/src/styles/terminal.scss
+++ b/src/styles/terminal.scss
@@ -63,6 +63,7 @@
     text-align: left;
     white-space: pre;
     padding: 0 1rem;
+    min-height: 320px;
 
     &:focus {
       outline: none;
